# mee4411-turtlebot3-ros2

./: .gitignore  README.md
cnn_controller/: README.md  package.xml  setup.cfg  setup.py
cnn_controller/cnn_controller/: __init__.py  cnn_controller_node.py
cnn_controller/cnn_model/: __init__.py  cnn_model.py  cnn_test.py  cnn_test.sh  cnn_train.py  cnn_train.sh
cnn_controller/goal_checker/: __init__.py  goal_checker.py
cnn_controller/params/: hyperparameters.yaml
global_planning/: README.md  package.xml  setup.cfg  setup.py
global_planning/costmap2d/: __init__.py  costmap_2d.py
global_planning/global_planning/: prm.py  prm_node.py
global_planning/prm/: __init__.py  prm.py  prm_node.py
lidar_localization/: README.md  package.xml  setup.py
lidar_localization/lidar_localization/: __init__.py  icp2d.py  icp_node.py
mee4411_simulation/launch/: collision_detector.py  gazebo_sim.xml  navigation_launch.py  simulation.xml  tb3_simulation.xml
mee4411_simulation/mee4411_simulation/: collision_detection.py  follow_path.py  repub_simulated_sensors.py
mee4411_simulation/rviz/: mee4411.rviz
mee4411_simulation/transform2d_utils/: lookup_transform.py  transform2d_utils.py
occupancy_grid/: README.md
occupancy_grid/launch/: map_server.py
occupancy_grid/maps/: turtlebot3_world.pgm  turtlebot3_world.yaml
occupancy_grid/occupancy_grid/: map_conversions.py  occupancy_grid_map.py  occupancy_grid_node.py
wheel_odometry/: README.md
wheel_odometry/test/: test_kinematics.py
wheel_odometry/wheel_odometry/: tb3_kinematics.py  wheel_odometry_node.py
