<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>global_planning</name>
  <version>0.0.0</version>
  <description>A ROS2 package for planning global paths through an occupancy grid map</description>
  <maintainer email="pdames@temple.edu">Philip Dames</maintainer>
  <license>LGPL-3.0-only</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>occupancy_grid</depend>
  <depend>mee4411_simulation</depend>

  <depend>python-cv2</depend>
  <depend>python-networkx</depend>
  <depend>python-numpy</depend>
  <depend>python-scipy</depend>
  <depend>python-threading</depend>
  <depend>python-tqdm</depend>
  <depend>python-typing</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
